# ostk

./: .gitignore  Cargo.toml  OSTK.spec  README.md  ostk.spec  pyproject.toml  readme.md  tauri.conf.json
.github/workflows/: build-release.yml  build.yml
capabilities/: default.json
docs/: agent.md  api.md  cli.md  examples.md
examples/: basic_usage.py
icons/: icon.icns
resources/: agent.md
scripts/: pack_ostk.py
src/: agent.rs  commands.rs  config.rs  main.rs  state.rs
src/llm/: groq.rs  mod.rs
src/ostk/: cli.py  main.py  settings.conf.example
src/ostk/agent/: agent.md  agent.py
src/ostk/agent/providers/: groq_models.py
src/ostk/cli/: __init__.py  agent.py  pyopensky.py  trajectory.py
src/ostk/gui/: __init__.py  __main__.py  api.py  app.py  main.py  state.py  utils.py
src/ostk/gui/components/: __init__.py  query_executor.py
src/ostk/gui/pages/: __init__.py  chat_page.py  query_page.py  settings_page.py
src/ostk/gui/web/: index.html
src/ostk/gui/web/css/: style.css
src/ostk/gui/web/js/: app.js
web/: index.html
web/css/: style.css
web/js/: app.js
