[project]
name = "ostk"
version = "0.1.0"
description = "OSTK (OpenSky ToolKit) - Nifty tools for opensky with good vibes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "click>=8.1.0",
    "prompt_toolkit>=3.0.43",
    "numpy>=2.3.4",
    "pymodes>=2.21.1",
    "pyopensky>=2.15",
    "groq>=0.4.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pywebview>=5.0",
    "pygobject>=3.42.0; sys_platform == 'linux'",
]

[tool.uv]
package = true

[project.scripts]
ostk = "ostk.cli:cli"

[dependency-groups]
dev = ["ipykernel>=7.1.0", "pyinstaller>=6.0.0"]
